add POST /users/newPassword/:token endpoint
